# PSIPositronProduction

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pylintrc  Analysis_Template.ipynb  BeamDynamics.py  FCCeeInjectorBeamApp.ipynb  FCCeeTargetTracking.md  Geant4OnPsiRhel7.md  PcubedMiscellaneous.py  PcubedStandardFormat.md  README.md  Test_BeamDynamics.py  VSCodeOnPsiRhel7.md  blabla  environment.yml  start
.binder/: environment.yml  start
Analyses/: Analysis_Fodo.ipynb  Analysis_InitialDistributionAstra.ipynb  Analysis_Template.ipynb  Benchmark_LatticeVsVolume_PositronSource_V2.ipynb
Astra/: Analysis_EmittanceGrowthInDriftSpace.ipynb
BdPyTools/: BeamDynamics.py  OctavePythonInterface.py  SimulationData.py  TestBeamDynamics.py  TestOctavePythonInterface.py  Test_BeamDynamics.py
Data/: SimulationsDb_Template.json
Doc/: ExportJupyterNotebooks.md  nbconvert_config_html_exportOutput.py
Elegant/: ElegantTricks.md
FCCeeInjectorBeamApp/: FCCeeInjectorBeamApp.ipynb
Geant4/: Analysis_GammaFlashTherapy.ipynb  Analysis_PositronEmittanceAndYieldVsTargetThickness.ipynb
Geant4/FCCeeTargetTracking/Injector/: CMakeLists.txt
Geant4/FCCeeTargetTracking/Injector/Fot/: Crystal.cc  Evenement.cc  Evenement.h  Fot.h  Particle.h  ParticleCollection.cc  ParticleCollection.h  Snake.cc  Snake.h  statistiques.h
Geant4/FCCeeTargetTracking/Injector/include/: GlobalVariable.hh  InjectorPrimaryGeneratorAction.hh  InjectorUserActionInitialization.hh
Geant4/FCCeeTargetTracking/Injector/src/: InjectorDetectorConstructionMessenger.cc  InjectorPrimaryGeneratorAction.cc  InjectorRunAction.cc  InjectorRunActionMessenger.cc
Miscellaneous/: DegaussingBXDipole.m
RFTrack/: Analysis_SolenoidFieldmaps.ipynb  RFTrackTools.py  Run_AMD.py  Run_CaptureLinac.py  Run_Linac1_Section1_Simple.py  Run_PositronLinac_Section3.py
RepoSetup/: Set_EnvVariables_Linux.sh  Set_Pythonpath.py  (+2 more)
(+894 files in other folders)
